--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ task clean(type: Delete) {
 }
 
 ext {
+    support_library_version = "27.1.1"
     retrofit_version = "2.4.0"
     rxkotlin_version = "2.2.0"
     rxjava_version = "2.3.0"
