--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".page.mobiledetail.MobileDetailActivity"></activity>
+        <activity android:name=".page.mobiledetail.MobileDetailActivity"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
